Finished finish recipe

--- a/RecipeTop/main/templates/main/follow_steps.html
+++ b/RecipeTop/main/templates/main/follow_steps.html
@@ -73,7 +73,7 @@
 			                    <div class="step-content">
 			                        
 			                        <div class="step-actions">
-			                           <button class="waves-effect waves-dark btn teal lighten-1" type="submit">Finish!</button>
+			                           <button class="waves-effect waves-dark btn teal lighten-1" type="button" onclick="window.location.href='{% url 'finish_recipe' recipe.id %}'">Finish!</button>
 			                        </div>
 			                    </div>
 	                  		</li>
