--- a/RecipeTop/main/static/main/css/cards.css
+++ b/RecipeTop/main/static/main/css/cards.css
@@ -13,8 +13,8 @@
 
 .float_heart {
   position: absolute;
-  top: 4px;
-  right: 15px;
+  top: 5%;
+  right: 4%;
   z-index: 5;
   font-size: 45px;
 }
@@ -29,6 +29,14 @@
   vertical-align: top;
 }
 
+.rating_display_container {
+  /* make it center */
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 4fr 1fr 1fr 1fr 1fr 1fr;
+  width: 45%;
+}
+
 .serving_size {
   color: #ff6f00;
 }
@@ -40,5 +48,47 @@
 .utensils {
   color: #ff6f00;
 }
+
+.icon-gray-card {
+  color: #b0bec5;
+  padding-top: 25px;
+  text-align: center;
+}
+
+.icon-teal-card {
+  color: #80cbc4;
+  padding-top: 25px;
+  text-align: center;
+}
+
+.icon-teal {
+  color: #80cbc4;
+}
+
+.recipe_steps {
+  display: grid;
+  grid-template-columns: 1fr 30fr;
+}
+
+.description {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.utensils_table_card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.ingredients_table {
+  width: 100%;
+}
+
+.ingredients_table_card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+/*# sourceMappingURL=cards.css.map */
 
 /*# sourceMappingURL=cards.css.map */
