--- a/RecipeTop/main/static/main/css/home.css
+++ b/RecipeTop/main/static/main/css/home.css
@@ -69,4 +69,10 @@
   transition: all 2s ease;
 }
 
+.description{
+  text-align: center;
+  margin:0 auto;
+  padding-top:3%;
+}
+
 /*# sourceMappingURL=home.css.map */
