-fixed js for users
-replace function doesn't use '1' or '2' but uses 'chk' and 'un'

--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -28,18 +28,18 @@
                         <h5 id={{user.id}} class="names">{{user.userName}}</h5>
                 </div>
                 <div class="prefences">
-                    <img class="prefences_img img1"src="../../static/main/img/cheese{{user.check_cheese}}.svg">
-                    <img class="prefences_img img1"src="../../static/main/img/steak{{user.check_steak}}.svg">
-                    <img class="prefences_img img1"src="../../static/main/img/fastfood{{user.check_fastfood}}.svg">
-                    <img class="prefences_img img2"src="../../static/main/img/cupcake{{user.check_cupcake}}.svg">
-                    <img class="prefences_img img2"src="../../static/main/img/broccoli{{user.check_broccoli}}.svg">
-                    <img class="prefences_img img2"src="../../static/main/img/apple{{user.check_apple}}.svg">
+                    <img class="prefences_img img1"src="../../static/main/img/cheese-{{user.check_cheese}}.svg">
+                    <img class="prefences_img img1"src="../../static/main/img/steak-{{user.check_steak}}.svg">
+                    <img class="prefences_img img1"src="../../static/main/img/fastfood-{{user.check_fastfood}}.svg">
+                    <img class="prefences_img img2"src="../../static/main/img/cupcake-{{user.check_cupcake}}.svg">
+                    <img class="prefences_img img2"src="../../static/main/img/broccoli-{{user.check_broccoli}}.svg">
+                    <img class="prefences_img img2"src="../../static/main/img/apple-{{user.check_apple}}.svg">
                 </div>
             </div>
         {% endfor %}
     </div>
     <div id="continue">
-        <h4 id="msg">Continue</h4>
+        <h4 id="msg">Continue </h4>
     </div>
      
 
@@ -89,12 +89,12 @@
                 <h3 class="pref_title">preferences</h3>
             </div>
             <div class="choices_container">
-                <img class="choices_img"src="../../static/main/img/cheese2.svg">
-                <img class="choices_img"src="../../static/main/img/steak2.svg">
-                <img class="choices_img"src="../../static/main/img/fastfood2.svg">
-                <img class="choices_img"src="../../static/main/img/cupcake2.svg">
-                <img class="choices_img"src="../../static/main/img/broccoli2.svg">
-                <img class="choices_img"src="../../static/main/img/apple2.svg">
+                <img class="choices_img"src="../../static/main/img/cheese-un.svg">
+                <img class="choices_img"src="../../static/main/img/steak-un.svg">
+                <img class="choices_img"src="../../static/main/img/fastfood-un.svg">
+                <img class="choices_img"src="../../static/main/img/cupcake-un.svg">
+                <img class="choices_img"src="../../static/main/img/broccoli-un.svg">
+                <img class="choices_img"src="../../static/main/img/apple-un.svg">
             </div>
         </form>
     </div>
