--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -96,6 +96,14 @@
                 <img class="choices_img"src="../../static/main/img/broccoli-un.svg">
                 <img class="choices_img"src="../../static/main/img/apple-un.svg">
             </div>
+            <div class="hidden">
+                <input type="text" id="cheese" value="false">
+                <input type="text" id="steak" value="false">
+                <input type="text" id="fast-food" value="false">
+                <input type="text" id="cupcake" value="false">
+                <input type="text" id="brocoli" value="false"> 
+                <input type="text" id="apple" value="false">
+            </div>
         </form>
     </div>
     <div class="modal-footer">
