--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -40,7 +40,7 @@
 									<br>
                         		</div>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
                         		</div>
                         		<br>
                      		</div>
@@ -57,8 +57,8 @@
                         		</div>
                         		<br>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
-                        			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
+                        			<button class="waves-effect waves-dark btn-flat previous-step btn-large">BACK</button>
                         		</div>
                         		<br>
                      		</div>
@@ -84,8 +84,8 @@
 							    	</div>
                         		</div>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
-                        			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
+                        			<button class="waves-effect waves-dark btn-flat previous-step btn-large">BACK</button>
                         		</div>
                      		</div>
                   		</li>
@@ -130,8 +130,8 @@
                         		</div>
                         		<br>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
-                        			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
+                        			<button class="waves-effect waves-dark btn-flat previous-step btn-large">BACK</button>
                         		</div>
                         		<br>
                      		</div>
@@ -175,8 +175,8 @@
                         		</div>
                         		<br>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
-                        			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
+                        			<button class="waves-effect waves-dark btn-flat previous-step btn-large">BACK</button>
                         		</div>
                         		<br>
                      		</div>
@@ -205,8 +205,8 @@
                         		</div>
                         		<br>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
-                        			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
+                        			<button class="waves-effect waves-dark btn-flat previous-step btn-large">BACK</button>
                         		</div>
                         		<br>
                      		</div>
@@ -220,8 +220,8 @@
 									<div class="chips chips-autocomplete" id="chip"></div>
                         		</div>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
-                        			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
+                        			<button class="waves-effect waves-dark btn-flat previous-step btn-large">BACK</button>
                         		</div>
                      		</div>
                   		</li>
@@ -243,8 +243,8 @@
                         		</div>
                         		<br>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
-                        			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
+                        			<button class="waves-effect waves-dark btn-flat previous-step btn-large">BACK</button>
                         		</div>
                         		<br>
                      		</div>
@@ -290,8 +290,8 @@
                         		</div>
                         		<br>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
-                        			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
+                        			<button class="waves-effect waves-dark btn-flat previous-step btn-large">BACK</button>
                         		</div>
                         		<br>
                      		</div>
@@ -336,8 +336,8 @@
                         		</div>
                         		<br>
                         		<div class="step-actions">
-                           			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
-                        			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
+                           			<button class="waves-effect waves-dark btn-large teal lighten-1 next-step">CONTINUE</button>
+                        			<button class="waves-effect waves-dark btn-flat previous-step btn-large">BACK</button>
                         		</div>
                         		<br>
                      		</div>
