--- a/RecipeTop/main/static/main/css/users.css
+++ b/RecipeTop/main/static/main/css/users.css
@@ -62,15 +62,19 @@ body {
 .Micontainer .users .user .user_name {
   display: flex;
   justify-content: center;
-  height: 30%;
+  height: 20%;
   width: 100%;
+  align-self: stretch;
+}
+.Micontainer .users .user .user_name .names {
+  font-size:220%;
 }
 .Micontainer .users .user .prefences {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 0.5fr 0.5fr 0.5fr;
   width: 100%;
-  height: 80%;
+  height: 40%;
   justify-items: center;
   align-items: center;
 }
@@ -78,15 +82,15 @@ body {
   align-self: end;
 }
 .Micontainer .users .user .prefences img {
-  width: 50%;
+  width: 80%;
   height: 40%;
 }
 .Micontainer .users .user .prefences .img2 {
   align-self: start;
 }
 .Micontainer .users .user .user_profile {
-  height: 100px;
-  width: 100px;
+  height: 25%;
+  width: 90%;
   background-image: url("../img/chef.png");
   background-size: contain;
   background-repeat: no-repeat;
