--- a/RecipeTop/main/static/main/css/users.css
+++ b/RecipeTop/main/static/main/css/users.css
@@ -163,8 +163,8 @@ body {
   height: 30vh;
 }
 .choices_container img {
-  width: 50%;
-  height: 40%;
+  width: 70%;
+  height: 60%;
 }
 .choices_container img:hover {
   cursor: pointer;
@@ -176,6 +176,12 @@ body {
   justify-content: center;
   height: 20vh;
   width: 100%;
+}
+
+.add_btn{
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 .hidden {
