--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -73,7 +73,7 @@
 </div>
    <!-- Modal Trigger -->
    <div class="add_user">
-        <button data-target="modal1" class="btn modal-trigger red lighten-2">Add User</button>
+        <button data-target="modal1" class="btn modal-trigger red lighten-2 add_usr">Add User</button>
   </div>
 <!-- Modal Structure -->
 <div id="modal1" class="modal">
@@ -83,10 +83,7 @@
             <input type="text" placeholder="name" name="name" required>
             <input type="text" placeholder="age" name="age" required>
             <div class="pref_title">
-                <div>
-                        <input type="submit" value="Add!" class="btn">
-                </div>
-                <h3 class="pref_title">preferences</h3>
+                <h3 class="pref_title">Preferences</h3>
             </div>
             <div class="choices_container">
                 <img class="choices_img"src="../../static/main/img/cheese-un.svg">
@@ -96,18 +93,21 @@
                 <img class="choices_img"src="../../static/main/img/broccoli-un.svg">
                 <img class="choices_img"src="../../static/main/img/apple-un.svg">
             </div>
+            <div class="add_btn">
+                    <input type="submit" value="Add!" class="btn">
+            </div>
             <div class="hidden">
-                <input type="text" id="cheese" value="false">
-                <input type="text" id="steak" value="false">
-                <input type="text" id="fast-food" value="false">
-                <input type="text" id="cupcake" value="false">
-                <input type="text" id="brocoli" value="false"> 
-                <input type="text" id="apple" value="false">
+                <input type="text" id="cheese" value="false" name="cheese">
+                <input type="text" id="steak" value="false" name="steak">
+                <input type="text" id="fast-food" value="false" name="fast-food">
+                <input type="text" id="cupcake" value="false" name="cupcake">
+                <input type="text" id="brocoli" value="false" name="broccoli"> 
+                <input type="text" id="apple" value="false" name="apple">
             </div>
         </form>
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat center">Close</a>
+        <a href="#!" class="modal-close waves-effect btn-flat center teal white-text">Close</a>
     </div>
 </div>
 
