--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -73,7 +73,7 @@
 </div>
    <!-- Modal Trigger -->
    <div class="add_user">
-        <button data-target="modal1" class="btn modal-trigger red lighten-2 add_usr">Add User</button>
+        <button data-target="modal1" class="btn modal-trigger red lighten-2 add_usr waves-effect">Add User</button>
   </div>
 <!-- Modal Structure -->
 <div id="modal1" class="modal">
