Backend for user preferences

--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -97,12 +97,12 @@
                 <img class="choices_img"src="../../static/main/img/apple-un.svg">
             </div>
             <div class="hidden">
-                <input type="text" id="cheese" value="false">
-                <input type="text" id="steak" value="false">
-                <input type="text" id="fast-food" value="false">
-                <input type="text" id="cupcake" value="false">
-                <input type="text" id="brocoli" value="false"> 
-                <input type="text" id="apple" value="false">
+                <input type="text" id="cheese" name="cheese" value="false">
+                <input type="text" id="steak" name="steak" value="false">
+                <input type="text" id="fast_food" name="fast_food" value="false">
+                <input type="text" id="cupcake" name="cupcake" value="false">
+                <input type="text" id="brocoli" name="brocoli" value="false"> 
+                <input type="text" id="apple" name="apple" value="false">
             </div>
         </form>
     </div>
