Fix tare button and units button for scale

--- a/RecipeTop/main/templates/main/follow_steps.html
+++ b/RecipeTop/main/templates/main/follow_steps.html
@@ -134,7 +134,7 @@
 	    					<br>
 	    					<br>
 	    					<button class="btn waves-effect waves-light btn-large" type="button" name="action" id="tare_button">Tare</button>
-	    					<button class="btn waves-effect waves-light btn-large" type="button" name="action" id="tare_button">Units</button>
+	    					<button class="btn waves-effect waves-light btn-large" type="button" name="action" id="units_button">Units</button>
 	    				</div>
 	    			</li>
 	  			</ul>
