--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -86,12 +86,30 @@
                 <h3 class="pref_title">Preferences</h3>
             </div>
             <div class="choices_container">
-                <img class="choices_img"src="../../static/main/img/cheese-un.svg">
-                <img class="choices_img"src="../../static/main/img/steak-un.svg">
-                <img class="choices_img"src="../../static/main/img/fastfood-un.svg">
-                <img class="choices_img"src="../../static/main/img/cupcake-un.svg">
-                <img class="choices_img"src="../../static/main/img/broccoli-un.svg">
-                <img class="choices_img"src="../../static/main/img/apple-un.svg">
+                <div class="img_cont">
+                        <img class="choices_img"src="../../static/main/img/cheese-un.svg">
+                        <span>Dairy</span>
+                </div>
+                <div class="img_cont">
+                        <img class="choices_img"src="../../static/main/img/steak-un.svg">
+                        <span>Meat</span>
+                </div>
+                <div class="img_cont">
+                        <img class="choices_img"  id="jf"src="../../static/main/img/fastfood-un.svg">
+                        <span>Junk-food</span>
+                </div>
+                <div class="img_cont">
+                        <img class="choices_img"src="../../static/main/img/cupcake-un.svg">
+                        <span>Sweets</span>
+                </div>
+                <div class="img_cont">
+                        <img class="choices_img"src="../../static/main/img/broccoli-un.svg">
+                        <span>Vegetarian</span>
+                </div>
+                <div class="img_cont">
+                        <img class="choices_img"src="../../static/main/img/apple-un.svg">
+                        <span>Fruits</span>
+                </div>
             </div>
             <div class="add_btn">
                     <input type="submit" value="Add!" class="btn">
