prefences text added to menu

--- a/RecipeTop/main/static/main/css/menu.css
+++ b/RecipeTop/main/static/main/css/menu.css
@@ -253,5 +253,48 @@ section {
 .hidden{
   display:none;
 }
+.img_cont{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  
+  justify-content: center;
+}
+.img_cont span{
+  align-self: center;
+} 
+#prf-btn{
+  text-align: center !important;
+}
+/* #jf{
+  width: 38%;
+  height: 35%;
+}
 
+.choices_container {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr 0.5fr;
+  grid-template-rows: 100px 100px;
+  grid-row-gap: 8%;
+  justify-items: center;
+  align-items: center;
+  width: 100%;
+  height: 35vh;
+  padding-top: 2%;
+}
+.choices_container img {
+  width: 50%;
+  height: 35%;
+}
+
+.img_cont{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  
+  justify-content: center;
+}
+.img_cont span{
+  align-self: center;
+} */
 /*# sourceMappingURL=menu.css.map */
