--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -71,11 +71,7 @@
                     <h4>{{user.userName}}'s Preferences</h4>
             </div>
             <div class="icons" id="icon">
-                    <!-- 
-                    
-                    
-                    
-                    
+                    <!--
                     -->
                     <div class="img_cont">
                             <img class="prefences_img img1"src="../../static/main/img/cheese-{{user.check_cheese}}.svg">
@@ -117,8 +113,12 @@
     </div>
     <div id="modal2" class="modal">
             <div class="modal-content">
-                <h4>Modal Header 2</h4>
-                <p>Theme</p>
+                <h4>Theme</h4>
+                <div class="thm_colors">
+                    <div class="teal color_option"></div>
+                    <div class="orange color_option"></div>
+                    <div class="purple color_option"></div>
+                </div>
             </div>
             <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
