--- a/RecipeTop/main/static/main/css/menu.css
+++ b/RecipeTop/main/static/main/css/menu.css
@@ -5,12 +5,12 @@ body {
   height: 1000px;
 }
 
-icon-teal-lightest {
+/* icon-teal-lightest {
   color: #80cbc4;
-}
+} */
 
 .link-teal-lightest {
-  color: #80cbc4;
+  /* color: #80cbc4; */
   width: 100%;
   height: 80%;
   padding-top: 2%;
