--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -45,19 +45,18 @@
                 <div class="collapsible-header teal lighten-2 color_items">
                     <i class="material-icons">assignment</i>Recipes
                 </div>
-                
                 <div class="collapsible-body teal lighten-3 account color_items">
-                        <a href={% url 'create' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Create<i class=" waves-effect material-icons icon-teal-lightest">create</i></a>
-                        <a href={% url 'search' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Search<i class="material-icons icon-teal-lightest">search</i></a>
-                        <a href={% url 'hearted' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Hearted<i class="material-icons icon-teal-lightest">favorite</i></a>
+                        <a href={% url 'create' %} class="waves-effect active blue-grey darken-1 link-teal-lightest color_links">Create<i class=" waves-effect material-icons icon-teal-lightest">create</i></a>
+                        <a href={% url 'search' %} class="waves-effect active blue-grey darken-1 link-teal-lightest color_links">Search<i class="material-icons icon-teal-lightest">search</i></a>
+                        <a href={% url 'hearted' %} class="waves-effect active blue-grey darken-1 link-teal-lightest color_links">Hearted<i class="material-icons icon-teal-lightest">favorite</i></a>
                 </div>
             </li>
             <li>
                 <div class="collapsible-header teal lighten-1 color_items"><i class="material-icons">account_circle</i>Account</div>
                 <div class="collapsible-body teal lighten-2 account color_items">
-                        <a href='#modal1'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger">User<i class="material-icons icon-teal-lightest">account_circle</i></a>
-                        <a href='#modal2'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger">settings<i class="material-icons icon-teal-lightest">settings</i></a>
-                        <a href='../users'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger">Log out<i class="material-icons icon-teal-lightest">exit_to_app</i></a>
+                        <a href='#modal1'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">User<i class="material-icons icon-teal-lightest">account_circle</i></a>
+                        <a href='#modal2'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">settings<i class="material-icons icon-teal-lightest">settings</i></a>
+                        <a href='../users'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">Log out<i class="material-icons icon-teal-lightest">exit_to_app</i></a>
                 </div>
             </li>
         </ul>
