--- a/RecipeTop/main/static/main/css/user_prf.css
+++ b/RecipeTop/main/static/main/css/user_prf.css
@@ -1,19 +1,49 @@
 
-
+.top_br{
+    height:10vh;
+    background-color: #b0bec5;
+}
 .prefences_cont{
+    padding:none;
     width: 100%;
     background-color: #b0bec5;
     height: 100%;
 }
 
+.preferences{
+    margin: 0 auto;
+    text-align: center;
+  }
+  .preferences h4{
+    vertical-align: bottom;
+    height:25%;
+    padding-top:6%;
+  }
 .pref{
   margin: 0 auto;
   background: #f5f5f5;
   font-family: "Roboto", sans-serif;
   width: 60vw;
-  height: 70vh;
+  height: 75vh;
   border-radius: 10px;
   -webkit-box-shadow: -1px 3px 15px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 3px 15px 0px rgba(0, 0, 0, 0.75);
   box-shadow: -1px 3px 15px 0px rgba(0, 0, 0, 0.75);
 }
+.icons{
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 80%;
+    height: 70%;
+    justify-items: center;
+    align-items: center;
+    margin-top:5%;
+  }
+
+  .prf_btn{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+  
