--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -54,60 +54,14 @@
             <li>
                 <div class="collapsible-header teal lighten-1 color_items"><i class="material-icons">account_circle</i>Account</div>
                 <div class="collapsible-body teal lighten-2 account color_items">
-                        <a href='#modal1'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">User<i class="material-icons icon-teal-lightest">account_circle</i></a>
-                        <a href='#modal2'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">settings<i class="material-icons icon-teal-lightest">settings</i></a>
+                        <a href={% url 'user_preferences' %} class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">User<i class="material-icons icon-teal-lightest">account_circle</i></a>
+                        <a href='#modal2'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">Theme<i class="material-icons icon-teal-lightest">settings</i></a>
                         <a href='../users'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">Log out<i class="material-icons icon-teal-lightest">exit_to_app</i></a>
                 </div>
             </li>
         </ul>
         <div id="close">
             <img>
-        </div>
-    </div>
-    <div id="modal1" class="modal">
-        <div class="modal-content .mdal1">
-            <div class="preferences">
-                    <h4>{{user.userName}}'s Preferences</h4>
-            </div>
-            <div class="icons" id="icon">
-                    <!--
-                    -->
-                    <div class="img_cont">
-                            <img class="prefences_img img1"src="../../static/main/img/cheese-{{user.check_cheese}}.svg">
-                            <span>Dairy</span>
-                    </div>
-                    <div class="img_cont">
-                            <img class="prefences_img img1"src="../../static/main/img/steak-{{user.check_steak}}.svg">
-                            <span>Meat</span>
-                    </div>
-                    <div class="img_cont">
-                            <img class="prefences_img img1"src="../../static/main/img/fastfood-{{user.check_fastfood}}.svg">
-                            <span>Junk-food</span>
-                    </div>
-                    <div class="img_cont">
-                            <img class="prefences_img img2"src="../../static/main/img/cupcake-{{user.check_cupcake}}.svg">
-                            <span>Sweets</span>
-                    </div>
-                    <div class="img_cont">
-                            <img class="prefences_img img2"src="../../static/main/img/broccoli-{{user.check_broccoli}}.svg">
-                            <span>Vegetarian</span>
-                    </div>
-                    <div class="img_cont">
-                            <img class="prefences_img img2"src="../../static/main/img/apple-{{user.check_apple}}.svg"> 
-                            <span>Fruits</span>
-                    </div>
-            </div>
-            <div class="hidden">
-                    <input type="text" id="cheese" >
-                    <input type="text" id="steak" >
-                    <input type="text" id="fast-food" >
-                    <input type="text" id="cupcake" >
-                    <input type="text" id="brocoli" > 
-                    <input type="text" id="apple" >
-            </div>
-        </div>
-        <div class="modal-footer" id="prf-btn">
-            <a href="#!" class="modal-close waves-effect waves-teal btn-flat">Agree</a>
         </div>
     </div>
     <div id="modal2" class="modal">
@@ -119,9 +73,9 @@
                     <div class="purple color_option"></div>
                 </div>
             </div>
-            <div class="modal-footer">
+            <!-- <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-            </div>
+            </div> -->
     </div>
                 
 
